fixing main search box visibility on peasa page

--- a/docroot/profiles/custom/webny/themes/custom/dfs_ny/sass/components/_public_appeals_search.scss
+++ b/docroot/profiles/custom/webny/themes/custom/dfs_ny/sass/components/_public_appeals_search.scss
@@ -1876,3 +1876,22 @@ html {
   overflow: hidden !important;
   right: 10px !important;
 }
+
+#block-dfssearchformblock input[type="search"],
+#block-dfssearchformblock input[type="search"]:focus,
+#block-dfssearchformblock input[type="text"],
+#block-dfssearchformblock input[type="text"]:focus {
+  font-size: 100%;
+  font-weight: 600;
+  color: #fff;
+  margin: 0;
+  padding: 1rem 1rem 1rem 2.5rem;
+  height: 2.4rem;
+  width: 100%;
+  border: 2px solid #fff;
+  border-radius: 30px;
+  background: url(../icons/dfs/search_white.svg) bottom left no-repeat;
+  background-color: #0a4c53;
+  background-size: 24px 24px;
+  background-position: 12px 10px;
+}
